nullaway_error_AA6CE357-6F92-4B38-B39A-8160A9AFA46A.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-aop/src/main/java/org/springframework/aop/aspectj/annotation/InstantiationModelAwarePointcutAdvisorImpl.java:211: error: [NullAway] unboxing of a @Nullable value
		return this.isAfterAdvice;
		           ^
    (see http://t.uber.com/nullaway )
